// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders correctly when only all props are provided 1`] = `
<button
  className="button sample"
  disabled={false}
  name="name"
  onClick={[Function]}
  title="Button"
>
  Button
</button>
`;

exports[`Button renders correctly when only required props are provided 1`] = `
<button
  className="button"
  disabled={false}
  name={undefined}
  onClick={[Function]}
  title="Button"
>
  Button
</button>
`;

exports[`Button should have disabled property if value disabled props is true  1`] = `
<button
  className="button"
  disabled={true}
  name={undefined}
  onClick={[Function]}
  title="Button"
>
  Button
</button>
`;

exports[`Button should not render text if icon props is provided 1`] = `
<button
  className="button"
  disabled={false}
  name={undefined}
  onClick={[Function]}
  title="Button"
>
  <i
    aria-hidden="true"
    className="fa fa-bold"
  />
</button>
`;
